change of names

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="dist/css/index.css">
+    <link rel="stylesheet" href="dist/css/datatable.css">
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            margin-top: 100px;
         }
     </style>
 </head>
@@ -490,7 +491,7 @@
             
         </tbody>
     </table>
-    <script src="dist/index.js"></script>
+    <script src="dist/datatable.js"></script>
     
 
     <script>
@@ -501,7 +502,7 @@
             showSearch: true,
             showEntries: true,
             numberOfEntries: 5,
-            headerButtons: ['Uno', 'Dos', 'Tres']
+            headerButtons: ['qwe', 'dfdf', 'asd']
         });
         dt.createFromTable();
 
