--- a/index.html
+++ b/index.html
@@ -498,15 +498,12 @@
         
         const dt = new DataTable('#tabla01', {
             showCheckboxes: true,
-            showHeaderButtons: 'always',
+            showHeaderButtons: true, 
             showSearch: true,
-            showEntries: true,
-            numberOfEntries: 5,
+            numberOfEntries: 10,
             headerButtons: ['qwe', 'dfdf', 'asd']
         });
         dt.createFromTable();
-
-
     </script>
 </body>
 </html>
