pagination file added

--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
             
         </tbody>
     </table>
+    <script src="dist/pagination.js"></script>
     <script src="dist/datatable.js"></script>
     
 
