--- a/index.html
+++ b/index.html
@@ -502,7 +502,24 @@
             showHeaderButtons: true, 
             showSearch: true,
             numberOfEntries: 5,
-            headerButtons: ['qwe', 'dfdf', 'asd']
+            headerButtons: [
+                {
+                    id: 'bNuevo',
+                    text: 'Nuevo', 
+                    click: function(){
+                        console.log(dt.getSelected());
+                    }
+                
+                },
+                {
+                    id: 'bEliminar',
+                    text: 'Eliminar', 
+                    click: function(){
+                        console.log('funcion eliminar');
+                    }
+                
+                }
+            ]
         });
         dt.createFromTable();
     </script>
